correct function to toggle dark mode

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -6,6 +6,7 @@ header {
   width: 100%;
   height: 3rem;
   background: none;
+  padding: 0.5rem;
 
   section {
     height: 100%;
